@@ -147,7 +147,7 @@ function PMA_exportData($db, $table, $crlf, $error_url, $sql_query)
     while ($record = PMA_DBI_fetch_row($result)) {
 
         $record_cnt++;
-        
+
         // Output table name as comment if this is the first record of the table
         if ($record_cnt == 1) {
             $buffer .= $crlf . '// ' . $db . '.' . $table . $crlf;
@@ -159,28 +159,17 @@ function PMA_exportData($db, $table, $crlf, $error_url, $sql_query)
 
 
         for ($i = 0; $i < $columns_cnt; $i++) {
-
-            $isLastLine = ($i + 1 >= $columns_cnt);
-
-            $column = $columns[$i];
-
-            if (is_null($record[$i])) {
-                $buffer .= "'" . $column . "'=>null" . (! $isLastLine ? ',' : '');
-            } elseif (is_numeric($record[$i])) {
-                $buffer .= "'" . $column . "'=>" . $record[$i] . (! $isLastLine ? ',' : '');
-            } else {
-                $buffer .= "'" . $column . "'=>'" . addslashes($record[$i]) . "'" . (! $isLastLine ? ',' : '');
-            }
+            $buffer .= "'" . $columns[$i]. "'=>" . var_export($record[$i], true) . (($i + 1 >= $columns_cnt) ? '' : ',');
         }
 
         $buffer .= ')';
     }
-    
+
     $buffer .= $crlf . ');' . $crlf;
     if (! PMA_exportOutputHandler($buffer)) {
         return FALSE;
     }
-        
+
     PMA_DBI_free_result($result);
 
     return true;
